--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,14 +29,14 @@ dist.jar=${dist.dir}/Downloader.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jsoup-1.10.2.jar=/Users/soeltan_z/Downloads/jsoup-1.10.2.jar
-file.reference.org.json-20120521.jar=/Users/soeltan_z/Downloads/org.json-20120521.jar
+file.reference.jsoup-1.10.2.jar=/Users/zacky/Documents/lib/jsoup-1.10.2.jar
+file.reference.org.json-20120521.jar=/Users/zacky/Documents/lib/org.json-20120521.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${libs.absolutelayout.classpath}:\
     ${file.reference.jsoup-1.10.2.jar}:\
-    ${file.reference.org.json-20120521.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${file.reference.org.json-20120521.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
